[package]
name = "registry-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# The Soroban SDK gives us everything we need to write smart contracts on Stellar
soroban-sdk = { version = "20.0.0", features = ["alloc"] }

[dev-dependencies]
# This enables testing our contract locally without deploying to testnet every time
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
